# sliderBipedal

./: .gitignore  hello_world.txt
Gazebo/devel/: .catkin  .rosinstall  setup.sh
Gazebo/devel/lib/mhr/: fs  js  pid_feed
Gazebo/devel/lib/pkgconfig/: gazebo_tutorials.pc  mhr.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  slider_gazebo.pc
Gazebo/src/: slider.urdf
Gazebo/src/mhr/: CMakeLists.txt
Gazebo/src/mhr/config/: mhr_gazebo_control-pos.yaml  mhr_gazebo_control.yaml
Gazebo/src/mhr/launch/: empty_world.launch  mhr_control.launch  mhr_world.launch
Gazebo/src/mhr/meshes/SimpleMeshes/: LeftFoot.STL  LeftHipYaw.STL  LeftShank.STL  LeftThigh.STL  Pelvis.STL  RightAnkleUniversal.STL  RightFoot.STL  RightHipRoll.STL  RightShank.STL  Trunk.STL  UpperBody.STL  UpperBodySimple.STL  UpperBodyWithArms.STL
Gazebo/src/mhr/src/: fs.cpp  js.cpp  pid_feed.cpp
Gazebo/src/mhr/urdf/: mhr_simple.xacro
Gazebo/src/mhr/worlds/: bullet.sdf  empty.world
Gazebo/src/slider_gazebo/: CMakeLists.txt  package.xml
Gazebo/src/slider_gazebo/config/: slider_control.yaml
Gazebo/src/slider_gazebo/launch/: empty_world.launch  slider_control.launch  slider_controller.launch  slider_position_control.launch  slider_torque_control.launch  slider_world.launch
Gazebo/src/slider_gazebo/urdf/: slider.urdf  (+1 more)
GradleProject/: build.gradle
KE_LEG.SLDASM/: CMakeLists.txt  package.xml
KE_LEG.SLDASM/launch/: display.launch  gazebo.launch
KE_LEG.SLDASM/urdf/: KE_LEG.SLDASM.urdf
V-rep/: 6leg_crawler_springlegs.ttt  leg.ttt  new_leg.ttt  slider_control.py  slider_version1.ttt
(+12 files in other folders)
